tests/expectations/compiler/constants/local_shadowing_fail.out
Error [EAST0372017]: The name `HELLO` is defined multiple times.
    --> compiler-test:10:23
     |
   3 |       const HELLO: u8 = 0u8;
     |             ^^^^^ previous definition of `HELLO` here
   ...
  10 |                   const HELLO:u8 = 1u8;
     |                         ^^^^^ `HELLO` redefined here
